--- a/src/pages/[smaxage]-[maxage]-[swr]-[immutable].astro
+++ b/src/pages/[smaxage]-[maxage]-[swr]-[immutable].astro
@@ -6,14 +6,15 @@ function isNumberGreaterThanZero(value: unknown) {
     return isNumber(value) && (value as number) > 0;
 }
 
-const {smaxage, maxage, swr} = Astro.params;
+const {smaxage, maxage, swr, immutable} = Astro.params;
 
 const smaxageCache = isNumberGreaterThanZero(smaxage) ? `, s-maxage=${smaxage}` : '';
 const maxageCache = isNumberGreaterThanZero(maxage) ? `, max-age=${maxage}` : '';
 const swrCache = isNumberGreaterThanZero(swr) ? `, stale-while-revalidate=${swr}` : '';
+const immutableCache = isNumberGreaterThanZero(immutable) ? ', immutable' : '';
 let cacheValue
 if (smaxageCache || maxageCache) {
-    cacheValue = `public${smaxageCache}${maxageCache}${swrCache}`
+    cacheValue = `public${smaxageCache}${maxageCache}${swrCache}${immutableCache}`
     Astro.response.headers.set('Cache-Control', cacheValue);
 }
 
